// Copyright 2025 The Celestinal Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package celestinal.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/celestinals/celestinal/api/gen/go/celestinal/v1;celestinal";

message Flag {
  string name = 1;
  string address = 2 [(buf.validate.field).string.host_and_port = true];
  string mode = 3 [(buf.validate.field).string.pattern = "^(dev|prod|sandbox)$"];
  string log_level = 4 [(buf.validate.field).string.pattern = "^(debug|info|warn|error)$"];
}

message FlagAPIServer {
  bool telegram = 1;
  string swagger_path = 2;
  string api_specs_path = 3;
}